force-app/main/default/objects/CampaignMember/fields/Contains_6W_Opps__c.field-meta.xml
<CustomField>
    <fullName>Contains_6W_Opps__c</fullName>
    <formula>Contact.Contains_Closed_Won_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contains 6W Opps</label>
    <type>Checkbox</type>
</CustomField>