force-app/main/default/objects/CampaignMember/fields/Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted__c</fullName>
    <formula>Lead.IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Converted?</label>
    <type>Checkbox</type>
</CustomField>