force-app/main/default/objects/CampaignMember/fields/Member_First_Touch__c.field-meta.xml
<CustomField>
    <fullName>Member_First_Touch__c</fullName>
    <formula>IF( Lead.CreatedDate =  CreatedDate, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member_First_Touch</label>
    <type>Checkbox</type>
</CustomField>